--- a/Qint.Desktop/Qint.Desktop.csproj
+++ b/Qint.Desktop/Qint.Desktop.csproj
@@ -1,10 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.0;netcoreapp1.0;net45</TargetFrameworks>
+    <TargetFrameworks>net46</TargetFrameworks>
     <ApplicationIcon />
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WrapperCore\WrapperCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
+    <PackageReference Include="Eto.Forms">
+      <Version>2.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Eto.Platform.Direct2D">
+      <Version>2.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Eto.Platform.Windows">
+      <Version>2.3.0</Version>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
