--- a/Qint.Desktop/Qint.Desktop.csproj
+++ b/Qint.Desktop/Qint.Desktop.csproj
@@ -7,6 +7,10 @@
     <StartupObject />
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\WrapperCore\WrapperCore.csproj" />
   </ItemGroup>
