--- a/Qint/Qint.Android/Qint.Android.csproj
+++ b/Qint/Qint.Android/Qint.Android.csproj
@@ -126,6 +126,11 @@
       <Name>Qint</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidNativeLibrary Include="libbindingstest.so">
+        <Abi>x86</Abi>
+    </AndroidNativeLibrary>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
