Experiments and f'tuff

--- a/Qint/Qint/Qint.csproj
+++ b/Qint/Qint/Qint.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\WrapperCore\WrapperCore.csproj" />
+    <ProjectReference Include="..\..\WrapperCore\Qint.Wrapper.csproj" />
   </ItemGroup>
 
   <ItemGroup>
