--- a/Qint.Desktop/Qint.Desktop.csproj
+++ b/Qint.Desktop/Qint.Desktop.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net46</TargetFrameworks>
-    <ApplicationIcon />
+    <ApplicationIcon>Qint.ico</ApplicationIcon>
     <OutputType>WinExe</OutputType>
     <StartupObject />
   </PropertyGroup>
@@ -12,7 +12,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WrapperCore\WrapperCore.csproj" />
+    <None Remove="ChatEntry.xeto" />
+    <None Remove="ChatModule.xeto" />
+    <None Remove="MainForm.xeto" />
+    <None Remove="Test.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Test.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="ChatEntry.xeto" />
+    <EmbeddedResource Include="ChatModule.xeto" />
+    <EmbeddedResource Include="MainForm.xeto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Eto.Serialization.Xaml" Version="2.3.0" />
+    <PackageReference Include="Portable.Xaml" Version="0.14.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
@@ -25,6 +43,10 @@
     <PackageReference Include="Eto.Platform.Windows">
       <Version>2.3.0</Version>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WrapperCore\Qint.Wrapper.csproj" />
   </ItemGroup>
 
 </Project>
